welcome.lessons.welcome.bat.bool2.CaughtSpeeding.scala.error
caughtSpeeding:6: error: ')' expected but 'if' found.
if ((speed>60 && speed<=80) || (isBirthday == true && speed>65 && speed<=85)
^caughtSpeeding:10: error: ')' expected but 'if' found.
if (speed>=81 || (isBirthday == true && speed >=86))
^